--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Rj4WcY4luO8eVPDPprYLGb38+aeN5VNCPxINNjAIieo=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Bangkok
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=127.0.0.1
+DB_HOST=192.168.1.143
 DB_PORT=1433
-DB_DATABASE=permission
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=Chok
+DB_USERNAME=sa
+DB_PASSWORD=P@ssw0rd
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
