--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlsrv
 DB_HOST=192.168.1.143
 DB_PORT=1433
-DB_DATABASE=Chok
+DB_DATABASE=NCmanagement
 DB_USERNAME=sa
 DB_PASSWORD=P@ssw0rd
 
